@@ -12,9 +12,9 @@ rcsb.utils.ec >= 0.25
 rcsb.utils.go >= 0.18
 rcsb.utils.seq >= 0.82
 rcsb.utils.seqalign >= 0.29
-rcsb.utils.targets >= 0.80
+rcsb.utils.targets >= 0.82
 rcsb.utils.struct >= 0.47
 rcsb.utils.taxonomy >= 0.43
-rcsb.utils.dictionary >= 1.26
-rcsb.workflow >= 0.44
+rcsb.utils.dictionary >= 1.27
+rcsb.workflow >= 0.45
 statistics; python_version < "3.0"
